--- a/experience.html
+++ b/experience.html
@@ -171,57 +171,69 @@
             
             <div class="timeline">
 
-                <!-- Zaki Technology -->
-                <div class="timeline-item" data-position="zaki">
+                <!-- freelance -->
+                <div class="timeline-item" data-position="Freelance">
                 <div class="timeline-content">
                     <div class="flex justify-between items-start mb-4">
                     <div>
                         <h3 class="serif text-2xl font-bold text-navy">Software Engineer</h3>
-                        <p class="text-lg text-copper font-semibold">Zaki Technology</p>
-                        <p class="text-gray-600">Remote, NC • July 2025 – Present</p>
+                        <p class="text-lg text-copper font-semibold">Freelance</p>
+                        <p class="text-gray-600">Remote, NC • November 2023 – Present</p>
                     </div>
                     <div class="text-right">
                         <span class="skill-tag">Full-Stack Development</span>
                     </div>
                     </div>
 
-                    <p class="text-gray-700 mb-4">
-                    Develop and deliver full-stack applications for clients using Python, React, and JavaScript—translating
-                    business requirements into efficient, user-friendly solutions with clean architecture and maintainable code.
-                    </p>
+                  <p class="text-gray-700 mb-4">
+    Designed and developed full-stack solutions for startups and small businesses—delivering scalable web applications,
+    intuitive UIs, and reliable backend services aligned with client needs and business goals.
+</p>
 
-                    <div class="timeline-details" id="zaki-details">
-                    <div class="border-t border-gray-200 pt-4 mt-4">
-                        <h4 class="font-semibold text-navy mb-3">Key Achievements:</h4>
+<div class="timeline-details" id="freelance-details">
+    <div class="border-t border-gray-200 pt-4 mt-4">
+        <h4 class="font-semibold text-navy mb-3">Key Achievements:</h4>
 
-                        <div class="achievement-item">
-                        <span>Built and deployed containerized services with <strong>Docker</strong> and orchestrated workloads with <strong>Kubernetes</strong> to ensure scalable, reliable releases.</span>
-                        </div>
-                        <div class="achievement-item">
-                        <span>Integrated <strong>Firebase</strong> for auth, cloud storage, and real-time data sync (Firestore/RTDB) across web clients.</span>
-                        </div>
-                        <div class="achievement-item">
-                        <span>Collaborated with clients and cross-functional teams to scope features, troubleshoot issues, and ship enhancements that improved system reliability and UX.</span>
-                        </div>
-                        <div class="achievement-item">
-                        <span>Delivered production-ready full-stack features in Python/React with clear APIs, reusable UI components, and automated checks.</span>
-                        </div>
+        <div class="achievement-item">
+            <span>Scoped projects end-to-end with clients, wrote lightweight <strong>Statements of Work (SOWs)</strong>, 
+            estimates, and delivery plans; maintained weekly status updates and change logs to ensure clear communication and accountability.</span>
+        </div>
 
-                        <h4 class="font-semibold text-navy mb-3 mt-6">Technologies Used:</h4>
-                        <div class="flex flex-wrap gap-2">
-                        <span class="skill-tag">Python</span>
-                        <span class="skill-tag">React</span>
-                        <span class="skill-tag">JavaScript</span>
-                        <span class="skill-tag">Docker</span>
-                        <span class="skill-tag">Kubernetes</span>
-                        <span class="skill-tag">Firebase Auth</span>
-                        <span class="skill-tag">Firestore / RTDB</span>
-                        <span class="skill-tag">Cloud Storage</span>
-                        <span class="skill-tag">REST APIs</span>
-                        <span class="skill-tag">CI/CD</span>
-                        </div>
-                    </div>
-                    </div>
+        <div class="achievement-item">
+            <span>Developed <strong>production-ready REST APIs</strong> with <strong>Java (Spring Boot)</strong> and 
+            <strong>Node.js (Express)</strong>, implementing <strong>OAuth 2.0</strong> authentication, caching, and pagination — 
+            reducing API latency by <strong>35%</strong> and cutting client support tickets by <strong>25%</strong>.</span>
+        </div>
+
+        <div class="achievement-item">
+            <span>Delivered <strong>full-stack web apps</strong> for startups using <strong>React</strong>, 
+            <strong>Tailwind CSS</strong>, and <strong>MySQL</strong> with <strong>Stripe API</strong> integration; 
+            introduced responsive design and UX improvements that boosted session duration by <strong>40%</strong> 
+            and mobile engagement by <strong>60%</strong>.</span>
+        </div>
+
+        <div class="achievement-item">
+            <span>Shipped accessible, responsive UIs built with <strong>TypeScript</strong>, <strong>React</strong>, 
+            and <strong>Tailwind CSS</strong>; added form validation with clear error states, reducing mobile form 
+            drop-offs by <strong>~15%</strong>.</span>
+        </div>
+
+        <h4 class="font-semibold text-navy mb-3 mt-6">Technologies Used:</h4>
+        <div class="flex flex-wrap gap-2">
+            <span class="skill-tag">Java</span>
+            <span class="skill-tag">Spring Boot</span>
+            <span class="skill-tag">Node.js</span>
+            <span class="skill-tag">Express</span>
+            <span class="skill-tag">TypeScript</span>
+            <span class="skill-tag">React</span>
+            <span class="skill-tag">Tailwind CSS</span>
+            <span class="skill-tag">MySQL</span>
+            <span class="skill-tag">Stripe API</span>
+            <span class="skill-tag">OAuth 2.0</span>
+            <span class="skill-tag">REST APIs</span>
+        </div>
+    </div>
+</div>
 
     <button class="expand-btn text-copper font-semibold hover:underline mt-2">
       Click to expand details
